test/modules/diten/usemodule/test_nested_use3.good
test_nested_use3.chpl:12: In function 'main':
test_nested_use3.chpl:13: error: cannot find module or enum named 'notmiddlemost' in module 'outermost'
